--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "typescript",
-  "version": "1.0.0",
-  "description": "udemy tutorial",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/billyshearson/typescript.git"
-  },
-  "author": "Takaki",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/billyshearson/typescript/issues"
-  },
-  "homepage": "https://github.com/billyshearson/typescript#readme"
+    "name": "typescript",
+    "version": "1.0.0",
+    "description": "udemy tutorial",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "lite-server"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/billyshearson/typescript.git"
+    },
+    "author": "Takaki",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/billyshearson/typescript/issues"
+    },
+    "homepage": "https://github.com/billyshearson/typescript#readme",
+    "devDependencies": {
+        "lite-server": "^2.5.4",
+        "ts-loader": "^8.0.2",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
+    }
 }
